# leapfrog

./: .clang-format  .gitattributes  .gitignore  404.html  LICENSE-text.html  README.md  authors.html  index.html  pkgdown.yml  sitemap.xml  temp_debug.R
.github/actions/codegen/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: R-CMD-check.yaml  c-interface.yaml  goals-deploy.yaml  goals-test.yaml  leapfrog-core.yaml  leapfrog-py-deploy.yaml  leapfrog-py-test.yaml  model-output-equality.yaml  pkgdown.yaml  prepare-release.yaml  py-package-deploy.yaml  py-package-test.yaml  test-coverage.yaml  valgrind.yaml
articles/: development.html  index.html  variables.html
c_interface/: CMakeLists.txt  c_interface.cpp
codegen/: README.md  pyproject.toml
codegen/src/: main.py
codegen/src/utils/: state_space.py
codegen/templates/: header.j2
codegen/templates/cpp/: concepts.j2  config.j2  config_mixer.j2  state_space.j2
cpp_generation/: pyproject.toml
cpp_generation/modelSchemas/configs/: HcConfig.json  SpConfig.json
cpp_generation/templates/cpp/py_interface/: py_adapters.j2
cpp_generation/templates/cpp/r_interface/: r_adapters.j2
cpp_interface/: CMakeLists.txt
delphi/: LeapfrogInterface.pas
goals/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml  run_goals.py
goals/src/: main.cpp
goals/src/_spectrum/: README.md
goals/src/_spectrum/AvenirCommon/Util/: BayesianCalibrator.py  DataFrameUtil.py  GBDelphiHelpers.py  Util.py  __init__.py  csvUtil.py
goals/src/_spectrum/SpectrumCommon/Const/HV/: HVConst.py  HVTags.py  __init__.py
goals/src/_spectrum/SpectrumCommon/Const/RN/: RNConst.py  RNTags.py  __init__.py
goals/src/_spectrum/SpectrumCommon/Util/AM/: AMUncertaintyAnalysisRW.py
goals/src/_spectrum/Tools/ExportPJNZ/: ExportPJN.py  ExportUtil.py  Exporter.py  README.md  pyproject.toml  setup.py
goals/src/_spectrum/Tools/ExportPJNZ/DP/: ExportDP.py
goals/src/_spectrum/Tools/ImportPJNZ/: ImportPJN.py  ImportUtil.py  Importer.py  README.md  pyproject.toml  setup.py
goals/src/_spectrum/Tools/ImportPJNZ/CS/: ImportCS.py
goals/src/_spectrum/Tools/ImportPJNZ/DP/: ImportDP.py  __init__.py
goals/src/_spectrum/Tools/ImportPJNZ/FP/: ImportFP.py  __init__.py
goals/src/_spectrum/Tools/ImportPJNZ/HV/: ImportHV.py
goals/src/_spectrum/Tools/ImportPJNZ/RN/: ImportRN.py  __init__.py
goals/src/leapfrog_goals/: __init__.py  _core.pyi
goals/src/leapfrog_mapping/: AMTags.py  DPConst.py  DPTags.py  GBConst.py  leapfrog_data_mapping.py
goals/tests/: conftest.py  test_goals.py
goals/tests/resources/: SouthAfrica.PJNZ  SouthAfrica_RG_ART.PJNZ  SouthAfrica_RG_ART_no_HIV.PJNZ  SouthAfrica_demogr.PJNZ  SouthAfrica_demogr_no_Migr.PJNZ  SouthAfrica_withHIV_no_intvn_art.PJNZ
inst/cpp_generation/: model_input.csv
inst/include/: child_model_simulation.hpp  model_input.hpp  types.hpp
leapfrog-core/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
leapfrog-core/cmake/: clang-tidy.cmake  compiler-warnings.cmake  cppcheck.cmake  doxygen.cmake  install-config.cmake  install-rules.cmake  variables.cmake
leapfrog-core/include/: README.md  initial_year.hpp  leapfrog.hpp  leapfrog_py.hpp  model_debugger.hpp  options.hpp  state_space_collector.hpp
leapfrog-core/include/array/: array.h
leapfrog-core/include/generated_new_target/: concepts.hpp  config.hpp  config_mixer.hpp  model_variants.hpp  state_space.hpp
leapfrog-core/include/generated_new_target/c_interface/: c_adapters.hpp  c_types.hpp
leapfrog-core/include/generated_new_target/cpp_interface/: cpp_adapters.hpp  hdf5_utils.hpp
leapfrog-core/include/generated_new_target/py_interface/: py_adapters.hpp
leapfrog-core/include/generated_new_target/r_interface/: r_adapters.hpp
leapfrog-core/include/models/: adult_hiv_model_simulation.hpp  child_model_simulation.hpp  general_demographic_projection.hpp  goals_simulation.hpp  hiv_demographic_projection.hpp  spectrum_post_hoc_calculations.hpp
leapfrog-core/model_schemas/: FullModel.json  GlobalStateSpace.json  ModelVariants.json
leapfrog-core/model_schemas/configs/: DpConfig.json  HaConfig.json  HcConfig.json  HvConfig.json  SpConfig.json  VgConfig.json
leapfrog-core/test/: .clang-tidy  CMakeLists.txt
leapfrog-core/test/source/: simulate_model.cpp  test_options.cpp
leapfrog-py/: CMakeLists.txt  README.md  pyproject.toml
leapfrog-py/scripts/: create_model_output.py
leapfrog-py/src/: main.cpp
leapfrog-py/src/leapfrog_py/: __init__.py  _core.pyi
leapfrog-py/tests/: test_leapfrog.py
leapfrogr/: .Rbuildignore  .lintr  DESCRIPTION  NAMESPACE  README.Rmd  README.md  cleanup  cleanup.win  configure  configure.win
leapfrogr/.claude/: settings.local.json
leapfrogr/R/: RcppExports.R  pjnz_metadata.R  process_pjnz.R  process_pjnz_dp.R  process_pjnz_ha.R  process_pjnz_hc.R  state_space.R  util.R  zzz.R
leapfrogr/inst/include/: leapfrog.hpp
leapfrogr/inst/include/models/: child_model_simulation.hpp  hiv_demographic_projection.hpp  spectrum_post_hoc_calculations.hpp
leapfrogr/man/: get_leapfrog_ss.Rd  get_state_space.Rd  process_pjnz.Rd
leapfrogr/scripts/: create_test_data.R  setup_dev_env.R
leapfrogr/src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  RcppExports.cpp  leapfrog.cpp
leapfrogr/tests/testthat/: helper-leapfrog.R  test-child-model.R  test-hiv-model.R  test-process-pjnz.R  test-state-space.R
leapfrogr/vignettes/: development.Rmd  variables.Rmd
reference/: beers_open_ended.html  deserialize_tensor_to_r.html  get_leapfrog_ss.html  get_state_space.html  get_time_slice.html  group_list_of_lists.html  index.html  list_model_configurations.html  pipe.html  process_parameters_to_cpp.html  process_parameters_to_r.html  process_pjnz.html  read_parameters.html  run_model.html  run_model_from_state.html  run_model_single_year.html  save_parameters.html  serialize_r_to_tensor.html
scripts/: benchmark  compare_delphi.R  create_test_data.R  generate  generate.ps1
