[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avenir-spectrum-export-pjnz"
version = "0.1.0"
description = "PJNZ export for Spectrum Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "avenir-common>=0.1.3",
    "spectrum-common>=0.1.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ExportPJNZ" = ["**/*.pas"]

