[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avenir-spectrum-import-pjnz"
version = "0.1.2"
description = "PJNZ import for Spectrum Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "avenir-common>=0.1.1",
    "avenir-spectrum-common>=0.1.2"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ImportPJNZ" = ["**/*.pas"]

